# py-cggtts

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  main.py  pyproject.toml  test_module.py
py/: Cargo.toml
py/src/: lib.rs
python/cggtts/: __init__.py  cggtts.pyi  py.typed
tests/: test_parse_cggtts.py
