[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cggtts"
version = "0.1.0"
description = "Python bindings for the cggtts Rust library (BIPM CGGTTS 2E parser)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
]

[tool.uv]

[[tool.uv.index]]
name = "bfsu"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[tool.maturin]
module-name = "cggtts"
manifest-path = "py/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pre-commit>=4.5.1",
]

[tool.mypy]
files = ["", ]
ignore_missing_imports = true
python_version = '3.10'

[tool.ruff]
# Line length matching Black's configuration
line-length = 88
# Target Python version
target-version = "py310"
# Files to include
extend-include = ["*.py", "*.pyi"]
# Files to exclude (converted from Black's exclude pattern)
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "target",
    "**/cggtts/cggtts.cpython-*.so"
]
fix = true

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "N",  # pep8-naming
    "PLC", "PLE", "PLR", "PLW",  # Pylint
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]
ignore = [
    "C901",  # too complex
    "B905",  # `zip()` without an explicit `strict=` parameter
    "S101",  # Use of `assert` detected
    "S104",  # Possible binding to all interfaces
    "S108",  # Probable insecure usage of temporary file or directory: "/tmp"
    "RET504",  # Unnecessary variable assignment before `return` statement
    "PLW0603",  # Using the global statement to update `xxx` is discouraged
    "PLR0913",  # Too many arguments for function
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.isort]
known-first-party = ["cggtts"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
